WP-1457: browser compatibility: elements appearing at the top of the page get cut off -- FIXED.

--- a/css/style.css
+++ b/css/style.css
@@ -1307,6 +1307,7 @@ del {
 .panel-display.gsb-landing-standard-page-one .main-header .panel-pane,
 .panel-display.gsb-landing-standard-page-one .main-middle .panel-pane {
   margin-bottom: 30px;
+  margin-top: 1px;
 }
 .panels-ipe-editing .panel-display.gsb-landing-standard-page-one .full-header, .panels-ipe-editing
 .panel-display.gsb-landing-standard-page-one .main-header, .panels-ipe-editing
@@ -3688,6 +3689,8 @@ ul.slideshow-items {
 .pane-bundle-quote {
   margin-bottom: 30px;
   padding-left: 35px;
+  overflow: hidden;
+  *zoom: 1;
 }
 .pane-bundle-quote .field-group-div {
   margin-top: 5px;
