--- a/sass/partials/05-grids/_grids-singularity.sass
+++ b/sass/partials/05-grids/_grids-singularity.sass
@@ -93,6 +93,7 @@
   .main-middle
     .panel-pane
       margin-bottom: 30px
+      margin-top: 1px
     .panels-ipe-editing &
       margin-bottom: 0
   .main-middle
